k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: notification-service
  labels:
    app: notification-service
spec:
  type: ClusterIP
  selector:
    app: notification-service
  ports:
    - name: http
      port: 80
      targetPort: http
